//
//  PersonalViewConstants.swift
//  CVBuilder
//
//  Created by Ramcharan Reddy Gaddam on 21/05/20.
//  Copyright © 2020 Ramcharan Reddy Gaddam. All rights reserved.
//

import Foundation

struct PersonalViewConstants {
    static let kImageName = "profile.png"
    static let kSave = "save"
    static let kVCTitle = "Personal Info"
    static let dateFormat = "MM/dd/yyyy"
    static let kDone = "Done"
    static let kCancel = "Cancel"
    
    static let invalidEmail = "Enter valid email id"
    
    static let kFirstNamePlaceholder = "Enter first name"
    static let kLastNamePlaceholder = "Enter last name"
    static let kPhoneNumberPlaceholder = "Enter phone number"
    static let kEmailIdPlaceholder = "Enter email Id"
    static let kAddressLine1 = "Enter address Line 1"
    static let kAddressLine2 = "Enter address Line 2"
    static let kDobPlaceholder = "Select DOB"
    static let kExpPlaceholder = "Enter year of experiece"
    static let kSkillsetPlaceholder = "Enter skill set"
    static let kPrimaryEduMarksPlaceholder = "Enter primary education %"
    static let kSecondaryEduMarksPlaceholder = "Enter secondary education %"
    static let kHigherEduMarksPlaceholder = "Enter higher education %"
}
