//
//  CreateCVConstants.swift
//  CVBuilder
//
//  Created by Ramcharan Reddy Gaddam on 21/05/20.
//  Copyright © 2020 Ramcharan Reddy Gaddam. All rights reserved.
//

import Foundation

struct CreateCVConstants {
    static let kPersonalInfo = "Personal information"
    static let kPastProjects = "Past projects"
    static let kProfessionalInfo = "Professional information"
    static let kAdditionalInfo = "Additional information"
    static let kVCTitle = "Sections"
    static let kReuseIdentifierForResumeTopic = "ResumeTopicCell"
}
