...
    override func viewDidLoad() {
        super.viewDidLoad()
        //Set up view intial view
        setUpInitialView()
        //Configure View from UIView Factory
        configureView()
        personalInfoScrollView.accessibilityIdentifier = "scrollView"
        
        loadData()
        
    }

    override func viewWillAppear(_ animated: Bool) {
...
